# UnitemTask

./: .pre-commit-config.yaml  README.md  pyproject.toml  requirements.txt
tests/: dummy_test.py  test_consumer.py  test_data_source.py  test_producer.py
unitem_task/: consumer.py  data_source.py  main.py  producer.py  settings.py
unitem_task/components/: consumer.py  data_source.py  producer.py  save_task.py
