[tool.poetry]
name = "unitem_task"
version = "1.0.0"
description = "Models module for Glucopred project."
authors = ["Wojciech Korczyński <wojciech.korczynski2@yahoo.pl>"]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.4"
opencv-python = "^4.5.5"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
mypy = "^0.961"
pre-commit = "^2.19.0"
pylint = "^2.14.1"
pytest = "^7.1.2"
[tool.isort]
profile = "black"

[tool.pylint.messages_control]
disable = [
    "too-few-public-methods",
    "invalid-name",
    "too-many-arguments"
]

[tool.pylint.master]
extension-pkg-whitelist = ['cv2']
